--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Pro</title>
+    <title>Hostel Pro Max</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,34 +13,37 @@
     <div class="logo">Hostel<span>PRO</span></div>
     <nav class="menu">
         <button class="menu-item active" onclick="switchPage('dashboard')">📊 Обзор</button>
-        <button class="menu-item" onclick="switchPage('rooms')">🚪 Комнаты</button>
-        <button class="menu-item" onclick="switchPage('residents')">👥 Жители</button>
+        <button class="menu-item" onclick="switchPage('rooms')">🚪 Жилой фонд</button>
+        <button class="menu-item" onclick="switchPage('residents')">👥 Все жители</button>
     </nav>
 </div>
 
 <div class="main-content">
     <section id="page-dashboard" class="page active">
         <div class="top-stats">
-            <div class="stat-card"><h3>Всего жителей</h3><p id="stat-total-residents">0</p></div>
-            <div class="stat-card"><h3>Свободных мест</h3><p id="stat-free-places">0</p></div>
-            <div class="stat-card"><h3>Касса (Общая)</h3><p id="stat-total-money">0 c</p></div>
+            <div class="stat-card"><h3>Жителей</h3><p id="stat-total-residents">0</p></div>
+            <div class="stat-card"><h3>Свободно мест</h3><p id="stat-free-places">0</p></div>
+            <div class="stat-card"><h3>Касса</h3><p id="stat-total-money">0 c</p></div>
         </div>
-        <div class="welcome-banner">
-            <h1>Панель управления</h1>
-            <p>Выберите раздел меню для начала работы.</p>
+    </section>
+
+    <section id="page-rooms" class="page">
+        <div class="page-header">
+            <h2>Комнаты</h2>
+            <button class="btn-primary" onclick="openAddRoomModal()">+ Новая комната</button>
         </div>
+        <div id="rooms-grid" class="rooms-grid"></div>
     </section>
 
     <section id="page-residents" class="page">
         <div class="page-header">
-            <h2>Список жителей</h2>
-            <button class="btn-primary" onclick="openAddResidentModal()">+ Заселить</button>
+            <h2>Общий список жителей</h2>
         </div>
         <div class="table-container">
             <table>
                 <thead>
                 <tr>
-                    <th>Имя</th>
+                    <th>Житель</th>
                     <th>Комната</th>
                     <th>Оплата</th>
                     <th>Залог</th>
@@ -51,20 +54,26 @@
             </table>
         </div>
     </section>
+</div>
 
-    <section id="page-rooms" class="page">
-        <div class="page-header">
-            <h2>Жилой фонд</h2>
-            <button class="btn-primary" onclick="openAddRoomModal()">+ Добавить комнату</button>
-        </div>
-        <div id="rooms-grid" class="rooms-grid"></div>
-    </section>
+<div id="modal-room-details" class="modal">
+    <div class="modal-content info-card">
+        <span class="close-btn" onclick="closeAllModals()">&times;</span>
+        <div id="room-details-content"></div>
+    </div>
+</div>
+
+<div id="modal-resident-details" class="modal">
+    <div class="modal-content info-card">
+        <span class="close-btn" onclick="closeAllModals()">&times;</span>
+        <div id="resident-details-content"></div>
+    </div>
 </div>
 
 <div id="modal-resident" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeAllModals()">&times;</span>
-        <h2 id="modal-resident-title">Новый житель</h2>
+        <h2 id="modal-resident-title">Данные жителя</h2>
         <form id="form-resident">
             <label>ФИО</label><input type="text" name="fullName" required>
             <label>Телефон</label><input type="text" name="phoneNumber" required>
@@ -78,7 +87,7 @@
 <div id="modal-accommodation" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeAllModals()">&times;</span>
-        <h2 id="modal-room-title">Создать комнату</h2>
+        <h2 id="modal-room-title">Параметры комнаты</h2>
         <form id="form-accommodation">
             <label>Название (№)</label><input type="text" name="name" required>
             <label>Тип</label><select name="type"><option value="ROOM">ROOM</option><option value="APARTMENT">APARTMENT</option></select>
@@ -95,12 +104,12 @@
 <div id="modal-payment" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeAllModals()">&times;</span>
-        <h3>Принять оплату</h3>
-        <p id="pay-res-name"></p>
+        <h3>💰 Принять оплату</h3>
+        <p id="pay-res-name" style="font-weight: bold; color: var(--primary);"></p>
         <form id="form-payment">
             <input type="hidden" name="residentId" id="pay-res-id">
-            <label>Сумма (сом)</label><input type="number" name="amount" required>
-            <button type="submit" class="btn-submit">Оплатить</button>
+            <label>Сумма оплаты (сом)</label><input type="number" name="amount" required>
+            <button type="submit" class="btn-submit">Подтвердить платеж</button>
         </form>
     </div>
 </div>
@@ -108,12 +117,12 @@
 <div id="modal-collateral" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeAllModals()">&times;</span>
-        <h3>Залог</h3>
-        <p id="col-res-name"></p>
+        <h3>📦 Регистрация залога</h3>
+        <p id="col-res-name" style="font-weight: bold; color: var(--primary);"></p>
         <form id="form-collateral">
             <input type="hidden" name="residentId" id="col-res-id">
-            <label>Описание</label><textarea name="description" required></textarea>
-            <button type="submit" class="btn-submit">Сохранить</button>
+            <label>Что оставил житель?</label><textarea name="description" placeholder="Паспорт, ключи, деньги..." required></textarea>
+            <button type="submit" class="btn-submit">Сохранить залог</button>
         </form>
     </div>
 </div>
