--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Pro Max</title>
+    <title>Hostel</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="sidebar">
-    <div class="logo">Hostel<span>PRO</span></div>
+    <div class="logo">Hostel</div>
     <nav class="menu">
         <button class="menu-item active" onclick="switchPage('dashboard')">📊 Обзор</button>
-        <button class="menu-item" onclick="switchPage('rooms')">🚪 Жилой фонд</button>
+        <button class="menu-item" onclick="switchPage('rooms')">🚪 Проживание</button>
         <button class="menu-item" onclick="switchPage('residents')">👥 Все жители</button>
     </nav>
 </div>
